logs/validate.20260408-043226.log
Mode: isolate
Isolate: including Chap47 Chap18 Chap02
error: expected delimiter
   --> src/Chap47/DoubleHashFlatHashTableStEph.rs:676:46
    |
676 | ...                   implies !#[trigger] old_table_seq[j].spec_entry_to_map().dom().contains(*key) by {
    |                                ^

error[E0425]: cannot find type `DoubleHashFlatHashTableStEph` in this scope
   --> src/Chap47/DoubleHashFlatHashTableStEph.rs:988:30
    |
988 |     impl std::fmt::Debug for DoubleHashFlatHashTableStEph {
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `DoubleHashFlatHashTableStEph` in this scope
   --> src/Chap47/DoubleHashFlatHashTableStEph.rs:994:32
    |
994 |     impl std::fmt::Display for DoubleHashFlatHashTableStEph {
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 2s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 23371MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
